--- a/css/style.css
+++ b/css/style.css
@@ -20,3 +20,9 @@ button {
 button:hover {
     background-color: #0056b3;
 }
+img {
+    max-width: 100%;
+    height: auto;
+    margin: 20px auto;
+    display: block;
+}
