--- a/css/style.css
+++ b/css/style.css
@@ -21,13 +21,6 @@ h1 {
     position: absolute;
     top: 0;
     left: 0;
-    animation: moveAround 4s linear infinite alternate;
+    will-change: transform;
 }
 
-@keyframes moveAround {
-    0%   { top: 0; left: 0; }
-    25%  { top: 0; left: calc(100% - 30px); }
-    50%  { top: calc(100% - 30px); left: calc(100% - 30px); }
-    75%  { top: calc(100% - 30px); left: 0; }
-    100% { top: 0; left: 0; }
-}
