--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+    background-color: #000;
+    color: red;
+    text-transform: uppercase;
     margin: 0;
     height: 100vh;
     overflow: hidden;
@@ -10,7 +12,6 @@ body {
 h1 {
     text-align: center;
     margin-top: 20px;
-    color: #333;
 }
 
 #ball {
